cmake_minimum_required(VERSION 3.6)
project(Searching_Lists__Sequential__Binary__and_Fibonacci_Searches)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES easterCalculatorMain.cpp easterCalculator.h easterCalculator.cpp Wallet.h Wallet.cpp WalletMain.cpp)
add_executable(Searching_Lists__Sequential__Binary__and_Fibonacci_Searches ${SOURCE_FILES})